Fix URL encoding issue